# hotfix-booking

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  jira-oauth-plan.md  pyproject.toml  version-matrix-plan.md
.github/workflows/: test.yml
src/hotfix_booking/: __init__.py  app.py  auth.py  compare.py  config.py  dependencies.py  history.py  jira_client.py  matrix.py  models.py  routes.py  store.py  teams_notifier.py  users.py  versioning.py
static/: hotfix-booking.js  index.html  styles.css  utils.js
tests/: conftest.py  test_api_auth.py  test_api_auth_gating.py  test_api_bookings.py  test_api_cancel.py  test_api_compare.py  test_api_features.py  test_api_fresh.py  test_api_jira.py  test_api_teams_integration.py  test_api_users.py  test_cleanup.py  test_compare.py  test_config.py  test_dependencies.py  test_history.py  test_httpx_lifespan.py  test_jira_cache.py  test_live_fixtures.py  test_matrix.py  test_seed.py  test_store.py  test_teams_notifier.py  test_users.py  test_versioning.py
tests/fixtures/jira/: client_options.json  cm_components.json  search_all.json  search_by_version_9_92.json  search_deployed.json
tests/fixtures/jira-live/: client_options.json  cm_components.json  search_all.json  search_by_version_9_97.json  search_deployed.json
tools/: capture_hotfix_fixtures.py  check_user_lookup.py  seed.py  side_by_side_diff.py  smoke.py
